<resources>
    <string name="app_name">workoutlog</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="email_string" />
    <string name="password_string" />
    <string name="confirm_password">Enter password</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="profile">Profile</string>
    <string name="track">Track</string>
    <string name="plan">Plan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plan_fragment">Plan fragment</string>
    <string name="hello_profile_fragment">Hello profile fragment</string>
    <string name="hello_track_fragment">Hello track fragment</string>
    <string name="loginsignup">Login</string>
    <string name="enter_phone_number">Enter phone number</string>
</resources>